[tool.poetry]
name = "budget-project"
version = "0.1.0"
description = ""
authors = ["otavius <developer.otavius@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.2"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
email-validator = "^2.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
